chore: update homepage URL in package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hr-helper",
-  "homepage": "https://<USERNAME>.github.io/hr-helper",
+  "homepage": "https://kenny50968758.github.io/hr-helper",
   "private": true,
   "version": "0.0.0",
   "type": "module",
